cmake_minimum_required(VERSION 3.28)
project(GB_EMU_2024)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)

set(SDL2_PATH "./libs/SDL2-2.30.10/x86_64-w64-mingw32")
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})

add_executable(GB_EMU_2024 main.cpp
        main.h)

target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
